[metadata]
name = zktypes
version = 0.0.1
author = ed255
description = zktypes exploration
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/privacy-scaling-explorations/zkevm-specs/
# project_urls =
#     Bug Tracker = https://github.com/privacy-scaling-explorations/zkevm-specs/issues
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    py-ecc==6.0.0
    varname==0.11.1

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest >= 7.0.0
lint =
    black >= 22.3.0
    mypy >= 0.931
    flake8 >= 4.0.1

[flake8]
max-line-length = 100
select = F401
per-file-ignores =
    # imported but unused
    __init__.py: F401

[pycodestyle]
max-line-length = 100

[mypy]
exclude = ['build']
ignore_missing_imports = true
